// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentDetailsSummary correctly renders a charge 1`] = `
<Card
  className="payment-details-summary-details"
>
  <div
    className="payment-details-summary"
  >
    <div
      className="payment-details-summary__section"
    >
      <p
        className="payment-details-summary__amount"
      >
        $15.00
        <span
          className="payment-details-summary__amount-currency"
        >
          usd
        </span>
        <PaymentStatusChip
          charge={
            Object {
              "amount": 1500,
              "billing_details": Object {
                "name": "Customer Name",
              },
              "created": 1568928240,
              "currency": "usd",
              "fee": 74,
              "id": "ch_38jdHA39KKA",
              "net": 1426,
              "order": Object {
                "number": 45981,
                "url": "https://somerandomorderurl.com/?edit_order=45981",
              },
              "outcome": Object {
                "risk_level": "normal",
              },
              "payment_method_details": Object {
                "card": Object {
                  "brand": "visa",
                  "last4": "4242",
                },
                "type": "card",
              },
              "type": "charge",
            }
          }
        />
      </p>
      <div
        className="payment-details-summary__breakdown"
      >
        <p>
          Fee: 
          $-0.74
        </p>
        <p>
          Net: 
          $14.26
        </p>
      </div>
    </div>
    <div
      className="payment-details-summary__section"
    >
      <div
        className="payment-details-summary__actions"
      >
        <ForwardRef(Button)
          className="payment-details-summary__actions-item"
          href="https://somerandomorderurl.com/?edit_order=45981"
          isDefault={true}
          isLarge={true}
        >
          View order 45981
        </ForwardRef(Button)>
      </div>
    </div>
  </div>
  <hr
    className="full-width"
  />
  <HorizontalList
    items={
      Array [
        Object {
          "content": "Sep 19, 2019, 5:24pm",
          "title": "Date",
        },
        Object {
          "content": "Customer Name",
          "title": "Customer",
        },
        Object {
          "content": <PaymentMethodDetails
            payment={
              Object {
                "card": Object {
                  "brand": "visa",
                  "last4": "4242",
                },
                "type": "card",
              }
            }
          />,
          "title": "Payment Method",
        },
        Object {
          "content": "normal",
          "title": "Risk Evaluation",
        },
        Object {
          "content": "ch_38jdHA39KKA",
        },
      ]
    }
  />
</Card>
`;

exports[`PaymentDetailsSummary renders defaults if charge object is empty 1`] = `
<Card
  className="payment-details-summary-details"
>
  <div
    className="payment-details-summary"
  >
    <div
      className="payment-details-summary__section"
    >
      <p
        className="payment-details-summary__amount"
      >
        $0.00
        <span
          className="payment-details-summary__amount-currency"
        >
          cur
        </span>
        <PaymentStatusChip
          charge={Object {}}
        />
      </p>
      <div
        className="payment-details-summary__breakdown"
      >
        <p>
          Fee: 
          $0.00
        </p>
        <p>
          Net: 
          $0.00
        </p>
      </div>
    </div>
    <div
      className="payment-details-summary__section"
    >
      <div
        className="payment-details-summary__actions"
      />
    </div>
  </div>
  <hr
    className="full-width"
  />
  <HorizontalList
    items={
      Array [
        Object {
          "content": "–",
          "title": "Date",
        },
        Object {
          "content": "–",
          "title": "Customer",
        },
        Object {
          "content": <PaymentMethodDetails />,
          "title": "Payment Method",
        },
        Object {
          "content": "–",
          "title": "Risk Evaluation",
        },
        Object {
          "content": "–",
        },
      ]
    }
  />
</Card>
`;

exports[`PaymentDetailsSummary renders fully refunded information for a charge 1`] = `
<Card
  className="payment-details-summary-details"
>
  <div
    className="payment-details-summary"
  >
    <div
      className="payment-details-summary__section"
    >
      <p
        className="payment-details-summary__amount"
      >
        $15.00
        <span
          className="payment-details-summary__amount-currency"
        >
          usd
        </span>
        <PaymentStatusChip
          charge={
            Object {
              "amount": 1500,
              "amount_refunded": 1500,
              "billing_details": Object {
                "name": "Customer Name",
              },
              "created": 1568928240,
              "currency": "usd",
              "fee": 74,
              "id": "ch_38jdHA39KKA",
              "net": 1426,
              "order": Object {
                "number": 45981,
                "url": "https://somerandomorderurl.com/?edit_order=45981",
              },
              "outcome": Object {
                "risk_level": "normal",
              },
              "payment_method_details": Object {
                "card": Object {
                  "brand": "visa",
                  "last4": "4242",
                },
                "type": "card",
              },
              "refunded": true,
              "type": "charge",
            }
          }
        />
      </p>
      <div
        className="payment-details-summary__breakdown"
      >
        <p>
          Refunded: 
          $-15.00
        </p>
        <p>
          Fee: 
          $-0.74
        </p>
        <p>
          Net: 
          $14.26
        </p>
      </div>
    </div>
    <div
      className="payment-details-summary__section"
    >
      <div
        className="payment-details-summary__actions"
      >
        <ForwardRef(Button)
          className="payment-details-summary__actions-item"
          href="https://somerandomorderurl.com/?edit_order=45981"
          isDefault={true}
          isLarge={true}
        >
          View order 45981
        </ForwardRef(Button)>
      </div>
    </div>
  </div>
  <hr
    className="full-width"
  />
  <HorizontalList
    items={
      Array [
        Object {
          "content": "Sep 19, 2019, 5:24pm",
          "title": "Date",
        },
        Object {
          "content": "Customer Name",
          "title": "Customer",
        },
        Object {
          "content": <PaymentMethodDetails
            payment={
              Object {
                "card": Object {
                  "brand": "visa",
                  "last4": "4242",
                },
                "type": "card",
              }
            }
          />,
          "title": "Payment Method",
        },
        Object {
          "content": "normal",
          "title": "Risk Evaluation",
        },
        Object {
          "content": "ch_38jdHA39KKA",
        },
      ]
    }
  />
</Card>
`;

exports[`PaymentDetailsSummary renders partially refunded information for a charge 1`] = `
<Card
  className="payment-details-summary-details"
>
  <div
    className="payment-details-summary"
  >
    <div
      className="payment-details-summary__section"
    >
      <p
        className="payment-details-summary__amount"
      >
        $15.00
        <span
          className="payment-details-summary__amount-currency"
        >
          usd
        </span>
        <PaymentStatusChip
          charge={
            Object {
              "amount": 1500,
              "amount_refunded": 1200,
              "billing_details": Object {
                "name": "Customer Name",
              },
              "created": 1568928240,
              "currency": "usd",
              "fee": 74,
              "id": "ch_38jdHA39KKA",
              "net": 1426,
              "order": Object {
                "number": 45981,
                "url": "https://somerandomorderurl.com/?edit_order=45981",
              },
              "outcome": Object {
                "risk_level": "normal",
              },
              "payment_method_details": Object {
                "card": Object {
                  "brand": "visa",
                  "last4": "4242",
                },
                "type": "card",
              },
              "refunded": false,
              "type": "charge",
            }
          }
        />
      </p>
      <div
        className="payment-details-summary__breakdown"
      >
        <p>
          Refunded: 
          $-12.00
        </p>
        <p>
          Fee: 
          $-0.74
        </p>
        <p>
          Net: 
          $14.26
        </p>
      </div>
    </div>
    <div
      className="payment-details-summary__section"
    >
      <div
        className="payment-details-summary__actions"
      >
        <ForwardRef(Button)
          className="payment-details-summary__actions-item"
          href="https://somerandomorderurl.com/?edit_order=45981"
          isDefault={true}
          isLarge={true}
        >
          View order 45981
        </ForwardRef(Button)>
      </div>
    </div>
  </div>
  <hr
    className="full-width"
  />
  <HorizontalList
    items={
      Array [
        Object {
          "content": "Sep 19, 2019, 5:24pm",
          "title": "Date",
        },
        Object {
          "content": "Customer Name",
          "title": "Customer",
        },
        Object {
          "content": <PaymentMethodDetails
            payment={
              Object {
                "card": Object {
                  "brand": "visa",
                  "last4": "4242",
                },
                "type": "card",
              }
            }
          />,
          "title": "Payment Method",
        },
        Object {
          "content": "normal",
          "title": "Risk Evaluation",
        },
        Object {
          "content": "ch_38jdHA39KKA",
        },
      ]
    }
  />
</Card>
`;
